fix some css layout issues

--- a/brewery-app/src/App.css
+++ b/brewery-app/src/App.css
@@ -7,6 +7,10 @@ body {
   background-color: antiquewhite;
 }
 
+body, html {
+  height: 100%;
+}
+
 h1 {
   font-weight: bold;
   font-size: 5rem;
@@ -48,6 +52,16 @@ a {
   margin-top: 5%;
 }
 
+.home-page {
+  background-image: url(./images/bar.jpg);
+  background-size: cover;
+  height: 100vh;
+}
+
+.home-content {
+  height: 80%;
+}
+
 /* Navbar */
 .navbar-brand {
   font-size: 2.5rem;
@@ -69,7 +83,8 @@ a {
 }
 
 .navbar {
-  box-shadow: 0px 5px 10px #888888
+  box-shadow: 0px 5px 10px #888888;
+  height: 78px;
 }
 
 /* Home Page */
@@ -86,7 +101,14 @@ a {
   max-width: 100%;
   object-fit: cover;
   opacity: 0.4;
+}
 
+.background-wrapper {
+  /* position:absolute;
+  top:0;
+  bottom:0;
+  right:0;
+  left:0; */
 }
 
 .icon-img {
@@ -98,13 +120,15 @@ a {
 .welcome-div {
   background-color: antiquewhite;
   border-radius: 10%;
-  position: absolute;
-  left: 50%;
-  top: 10%;
+  /* position: absolute; */
+  /* left: 50%;
+  top: 10%; */
   padding-bottom: 3%;
-  margin-top: 5%;
-  margin-bottom: 10%;
-  margin-left: -210px;
+  /* margin-top: 5%;
+  margin-bottom: 5%; */
+  width:fit-content;
+  margin:5% auto 5%;
+  /* margin-left: -210px; */
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 
@@ -239,7 +263,7 @@ tr:nth-child(odd) {
 /* Footer */
 
 .footer {
-  position: fixed;
+  position: absolute ;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -288,4 +312,8 @@ tr:nth-child(odd) {
 .visualization-by-city-container {
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+@media only screen and (max-width: 600px) {
+
 }
